Modified project settings

--- a/project.config
+++ b/project.config
@@ -1,5 +1,5 @@
 [project]
-	description = Test Publish message
+	description = Weather Proj - tmoklohar
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
