Modify access rules

--- a/project.config
+++ b/project.config
@@ -5,9 +5,12 @@
 [access "refs/*"]
 	owner = group user/tmoklohar
 [access "refs/for/refs/*"]
+	read = group Simple-Proj-Developers
 	read = group user/tmoklohar
+	push = group Simple-Proj-Developers
 	push = group user/tmoklohar
 	label-Code-Review = -2..+2 group user/tmoklohar
+	label-Verified = -1..+1 group Simple-Proj-Developers
 	label-Verified = -1..+1 group user/tmoklohar
 	rebase = group user/tmoklohar
 	removeReviewer = group user/tmoklohar
